@@ -24,9 +24,9 @@ t/ipc_srlock*
 var/logs
 var/run
 var/tmp
-var/root/assets
 var/root/css
 var/root/docs/.mtime
+var/root/docs/assets
 var/root/docs/de
 var/root/docs/en/01_Examples/03_Test.md
 var/root/docs/en/01_Examples/06_Next_Level/
