@@ -1,4 +1,4 @@
-<form action="[% links.req_uri %]?auth=1"
+<form action="[% links.base_uri %]?auth=1"
      enctype="application/x-www-form-urlencoded"
       method="post" name="create-file">
    <input  class="pathname" name="pathname" type="textfield">
